--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
-<h1>
-  {{title}}
-</h1>
+<!--<app-title [subtitle]="subtitle"></app-title>-->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+      <!--<nav class="navbar navbar-default" role="navigation">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Brand</a>
+        </div>
+      </nav>-->
+      hello
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <div class="list-group">
+        <div>
+          <a class="list-group-item active" routerLink="contact" routerLinkActive="active">Contact</a>
+        </div>
+        <div>
+          <a class="list-group-item" routerLink="crisis" routerLinkActive="active">Crisis Center</a>
+        </div>
+        <div>
+          <a class="list-group-item" routerLink="heroes" routerLinkActive="active">Heroes</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div class="panel panel-default">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </div>
+</div>
